<resources>
    <string name="app_name">Shoe Store</string>
    <string name="shoeTitle">Shoe Store</string>

    <string name="signout">Sign Out</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signup">Sign Up</string>
    <string name="signin">Sign in</string>
    <string name="password_con">Must be 8 or more characters</string>
    <string name="email_address">Email Address</string>

    <string name="welcome">Welcome!</string>
    <string name="start_add">Start by adding more Shoes!</string>

    <string name="add_shoe">Add a Shoe</string>
    <string name="add">Add Shoe</string>
    <string name="button_add_desc">Add New Shoe</string>
    <string name="cancel">Cancel</string>

    <string name="shoe_size">Size</string>
    <string name="shoe_brand">Brand</string>
    <string name="shoe_name">Name</string>
    <string name="shoe_price">Price</string>
    <string name="shoe_about">About</string>

    <string name="add_new_shoe">Start by Adding a New Shoe!</string>
    <string name="instructions">Instructions</string>

    <string name="details">A shoe store where you can list your product for sale simply through a click of a button!</string>
    <string name="shoe_list">Shoe List</string>


</resources>
