<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!-- Using a LinearLayout to have the have the login vertically
    stacked as the user may be have been accustomed
    to that way most of the time -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorAccent"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="24dp">

        <TextView
            android:id="@+id/email_text"
            style="@style/sign_in_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email_address" />

        <EditText
            android:id="@+id/email_edit"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:ems="18"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            app:layout_constraintBottom_toTopOf="@+id/edit_text_login_password"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/password_text"
            style="@style/sign_in_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/button1_margin"
            android:text="@string/password" />

        <EditText
            android:id="@+id/password_edit"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:ems="18"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_edit"
            tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />

        <TextView
            android:id="@+id/pass_condition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_con"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_edit" />

        <Button
            android:id="@+id/signup_button"
            style="@style/button_style"
            android:layout_width="145dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/button1_margin"
            android:text="@string/signup"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_edit" />

        <Button
            android:id="@+id/signin_button"
            style="@style/button_style"
            android:layout_width="145dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/button2_margin"
            android:text="@string/signin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_button" />

    </LinearLayout>
</layout>