<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- use a LinearLayout to have the have the the instructions stacked
    vertically as it the user may expect it in such way -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorAccent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="24dp">

        <TextView
            android:id="@+id/text_shoe_list_button_instructions"
            style="@style/sign_in_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/instructions"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/text_shoe_list_instructions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/button1_margin"
            android:gravity="center"
            android:text="@string/details"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp" />

        <Button
            android:id="@+id/shoe_list_button"
            style="@style/button_style"
            android:layout_width="145dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/button2_margin"
            android:text="@string/shoe_list" />

    </LinearLayout>
</layout>